--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -178,7 +178,7 @@
     short_name: BE
     version: "0.8.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20020911"
 - 
   user_agent: Bunjalloo/0.7.6(Nintendo DS;U;en)
   client:
@@ -223,7 +223,7 @@
     short_name: CA
     version: "2.1.2"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20120308"
 - 
   user_agent: Mozilla/5.0 (X11; Linux x86_64; rv:27.0) Gecko/20100101 Firefox/27.0 Cunaguaro/27.0
   client:
@@ -232,7 +232,7 @@
     short_name: CU
     version: "27.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Windows NT 6.1) AppleWebKit/537.36 (KHTML, like Gecko) coc_coc_browser/45.0 Chrome/39.0.2171.74 Safari/537.36
   client:
@@ -331,7 +331,7 @@
     short_name: CK
     version: "1.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20131030"
 - 
   user_agent: Mozilla/5.0 (Linux; Android 4.1.1; ALCATEL ONE TOUCH 6033X Build/JRO03C) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/31.0.1650.59 Mobile Safari/537.36
   client:
@@ -358,7 +358,7 @@
     short_name: CO
     version: "11.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US) AppleWebKit/534.13 (KHTML, like Gecko) Chrome/9.0.597.98 Safari/534.13 ChromePlus/1.6.0.0
   client:
@@ -493,7 +493,7 @@
     short_name: EP
     version: "1.2.6"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20040413"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux i686; fr-fr) AppleWebKit/531.2+ (KHTML, like Gecko) Version/5.0 Safari/531.2+ Debian/squeeze (2.30.6-1) Epiphany/2.30.6
   client:
@@ -520,7 +520,7 @@
     short_name: FB
     version: "0.7"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20031007"
 - 
   user_agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_5_6; en-us) AppleWebKit/528.16 (KHTML, like Gecko) Fluid/0.9.6 Safari/528.16
   client:
@@ -538,7 +538,7 @@
     short_name: FE
     version: "10.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20120118"
 - 
   user_agent: Mozilla/5.0 (X11; Arch Linux i686; rv:2.0) Gecko/20110321 Firefox/4.0
   client:
@@ -547,7 +547,7 @@
     short_name: FF
     version: "4.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20110321"
 - 
   user_agent: Mozilla/5.0 (BeOS; U; Haiku BePC; en-US; rv:1.8.1.21pre) Gecko/20090218 BonEcho/2.0.0.21pre
   client:
@@ -556,7 +556,7 @@
     short_name: FF
     version: "2.0.0.21"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20090218"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.11) Gecko GranParadiso/3.0.11
   client:
@@ -574,7 +574,7 @@
     short_name: FF
     version: "3.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20070301"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1b5pre) Gecko/20090424 Shiretoko/3.5b5pre
   client:
@@ -583,7 +583,7 @@
     short_name: FF
     version: "3.5"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20090424"
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.3pre) Gecko/20100403 Lorentz/3.6.3plugin2pre (.NET CLR 4.0.20506)
   client:
@@ -592,7 +592,7 @@
     short_name: FF
     version: "3.6.3"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100403"
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.13) Gecko/20110504 Namoroka/3.6.13
   client:
@@ -601,7 +601,7 @@
     short_name: FF
     version: "3.6.13"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20110504"
 - 
   user_agent: Mozilla/5.0 (iPhone; CPU iPhone OS 8_3 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) FxiOS/1.0 Mobile/12F69 Safari/600.1.4
   client:
@@ -664,7 +664,7 @@
     short_name: GA
     version: "1.3.21"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20051105"
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; cs-CZ) AppleWebKit/532.4 (KHTML, like Gecko) Google Earth/5.2.1.1329 Safari/532.4
   client:
@@ -718,7 +718,7 @@
     short_name: ID
     version: "26.0.0.2"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux i686; de; rv:1.9.0.15) Gecko/2009102815 Iceweasel/3.0.6 (Debian-3.0.6-3)
   client:
@@ -898,7 +898,7 @@
     short_name: KM
     version: "1.5.4"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100228"
 - 
   user_agent: Mozilla/5.0 (compatible; Konqueror/3.5; Linux; de) KHTML/3.5.8 (like Gecko) (Debian)
   client:
@@ -916,7 +916,7 @@
     short_name: KP
     version: "3.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20080705"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.0.8) Gecko Fedora/1.9.0.8-1.fc10 Kazehakase/0.5.6
   client:
@@ -934,7 +934,7 @@
     short_name: KY
     version: "0.6.1.70394"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100222"
 - 
   user_agent: Mozilla/5.0 (Windows NT 5.1) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/34.0.1847.137 Safari/537.36 LBBROWSER
   client:
@@ -988,7 +988,7 @@
     short_name: MB
     version: "0.9.7"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20090514"
 - 
   user_agent: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/66.0.3359.181 Safari/537.36 Avast/66.2.567.182
   client:
@@ -1015,7 +1015,7 @@
     short_name: MB
     version: "1.7.4.8"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100723"
 - 
   user_agent: NCSA_Mosaic/2.7b5 (X11;Linux 2.6.7 i686) libwww/2.12 modified
   client:
@@ -1123,7 +1123,7 @@
     short_name: NV
     version: "3.9.0.0.22"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100401"
 - 
   user_agent: SAMSUNG-SGH-A737/UCHD2 SHP/VPP/R5 NetFront/3.4 SMM-MMS/1.2.0 profile/MIDP-2.0 configuration/CLDC-1.1
   client:
@@ -1150,7 +1150,7 @@
     short_name: NS
     version: "6.01"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20010131"
 - 
   user_agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.7.5) Gecko/20070321 Netscape/8.1.3
   client:
@@ -1159,7 +1159,7 @@
     short_name: NS
     version: "8.1.3"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20070321"
 - 
   user_agent: Mozilla/5.0 (Android 5.1; U613 Build/LMY47D) AppleWebKit/537.36 (KHTML, like Gecko) NTENTBrowser/1.0.0.547 (CellularOne-US) Mobile Safari/537.36
   client:
@@ -1375,7 +1375,7 @@
     short_name: PM
     version: "24.3.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20140129"
 - 
   user_agent: Mozilla/5.0 (webOS/1.0; U; en-US) AppleWebKit/525.27.1 (KHTML, like Gecko) Version/1.0 Safari/525.27.1 Pre/1.0
   client:
@@ -1420,7 +1420,7 @@
     short_name: PX
     version: "0.4"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20021029"
 - 
   user_agent: Mozilla/4.0 (compatible; Polaris 6.2; Brew 3.1.5; en)/240X320 Samsung sam-r631
   client:
@@ -1492,7 +1492,7 @@
     short_name: VB
     version: "8.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20081217"
 - 
   user_agent: 'Safari/9537.73.11 CFNetwork/673.0.3 Darwin/13.0.0 (x86_64) (MacBookAir6%2C2)'
   client:
@@ -1609,7 +1609,7 @@
     short_name: SX
     version: "2.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20061024"
 - 
   user_agent: Mozilla/5.0 (Linux; U; Tizen/1.0 like Android; en-us; AppleWebKit/534.46 (KHTML, like Gecko) Tizen Browser/1.0 Mobile
   client:
@@ -1744,7 +1744,7 @@
     short_name: EI
     version: "1.2"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20101026"
 - 
   user_agent: Mozilla/5.0 (Linux; Android 5.1; Epic P7 Build/LMY47D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/43.0.2357.121 Safari/537.36
   client:
@@ -1789,7 +1789,7 @@
     short_name: WF
     version: "30.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_10_4) AppleWebKit/537.36 (KHTML, like Gecko) Iridium/41.2 Safari/537.36 Chrome/41.0.2272.118
   client:
@@ -1807,7 +1807,7 @@
     short_name: CY
     version: "28.0.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (iPhone; CPU OS 8_0 like Mac OS X) AppleWebKit/538.34.9 (KHTML, like Gecko) iCabMobile/1.1
   client:
@@ -1852,7 +1852,7 @@
     short_name: TF
     version: ""
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:52.0) Gecko/20100101 AOLShield/52.4.2
   client:
@@ -1861,7 +1861,7 @@
     short_name: AD
     version: "52.4.2"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Linux; Android 9; ONEPLUS A3003 Build/PQ3A.190505.002; rv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Rocket/1.6.2(12322) Chrome/74.0.3729.157 Mobile Safari/537.36
   client:
@@ -2212,7 +2212,7 @@
     short_name: OS
     version: "3.8.20"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (X11; Linux i686 on x86_64; rv:42.0) Gecko/20100101 Firefox/42.0 webissimo3/3.7.22+svn30377
   client:
@@ -2221,7 +2221,7 @@
     short_name: OS
     version: "3.7.22"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 -
   user_agent: Mozilla/5.0 (Linux; U; COS like Android 4.1.2; zh_CN; 909d Build/JRO03C) AppleWebKit/537.17 (KHTML, like Gecko) COSBrowser/1.0.0 Version/4.0 Mobile Safari/537.17
   client:
@@ -2311,7 +2311,7 @@
     short_name: TO
     version: "7.68.0.201"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 -
   user_agent: Mozilla/5.0 (Linux; Android 7.0; SO-01H Build/32.3.E.0.136; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/64.0.3282.137 Mobile Safari/537.36 Sleipnir/3.5.7
   client:
@@ -2401,7 +2401,7 @@
     short_name: BH
     version: "25.3.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20150425"
 - 
   user_agent: Mozilla/5.0 (X11; U; Linux armv6l; rv 1.8.1.5pre) Gecko/20070619 Minimo/0.020
   client:
@@ -2410,7 +2410,7 @@
     short_name: MN
     version: "0.020"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20070619"
 -
   user_agent: Mozilla/5.0 (Linux; Android 4.4; Moto 360 Build/KNX01S) AppleWebKit/537.36 (KHTML, like Gecko) WIB/0.9.8 Mobile Safari/537.36
   client:
@@ -2590,7 +2590,7 @@
     short_name: LH
     version: "49.0"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 -
   user_agent: Mozilla/5.0 (Linux; U; X11; en-US; Valve Steam GameOverlay/1586022601; ) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.117 Safari/537.36
   client:
@@ -2662,7 +2662,7 @@
     short_name: S5
     version: "2.4"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100101"
 - 
   user_agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Colibri/1.16.0 Chrome/78.0.3904.99 Electron/7.1.1 Safari/537.36
   client:
@@ -2824,7 +2824,7 @@
     short_name: ZV
     version: 18.0.1
     engine: Gecko
-    engine_version: ""
+    engine_version: "20130204"
 
 - user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-Hans-CN; CDY-TN00 Build/HUAWEICDY-TN00) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 Quark/4.1.2.133 Mobile Safari/537.36
   client:
