--- a/Tests/fixtures/smartphone-9.yml
+++ b/Tests/fixtures/smartphone-9.yml
@@ -2793,7 +2793,7 @@
     short_name: NV
     version: "3.9.0.0.22"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100401"
   device:
     type: smartphone
     brand: NK
@@ -3913,7 +3913,7 @@
     short_name: MB
     version: "1.7.4.8"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100723"
   device:
     type: smartphone
     brand: NK
