--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -88,7 +88,7 @@
     short_name: KY
     version: "0.6.1.70394"
     engine: Gecko
-    engine_version: ""
+    engine_version: "20100222"
   device:
     type: tv
     brand: ""
