fix(pr) Invalid rule for Vertu brand removed

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13118,7 +13118,7 @@ Vertu:
     - regex: 'ASTER P[/;) ]'
       device: 'smartphone'
       model: 'Aster P'
-    - regex: 'Vernee[ _-]([a-z0-9_-]+)'
+    - regex: 'Vertu[ ]?([a-z0-9]+)'
       model: '$1'
 
 # Venso mobile
