--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -129,7 +129,7 @@
     short_name: FF
     version: "4.0"
     engine: Gecko
-    engine_version: "20110321"
+    engine_version: "2.0"
   device:
     type: desktop
     brand: ""
@@ -189,7 +189,7 @@
     short_name: FF
     version: "3.0.6"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.6"
   device:
     type: desktop
     brand: ""
@@ -209,7 +209,7 @@
     short_name: FF
     version: "3.6.13"
     engine: Gecko
-    engine_version: "20101209"
+    engine_version: "1.9.2.13"
   device:
     type: desktop
     brand: ""
@@ -309,7 +309,7 @@
     short_name: CK
     version: "1.0"
     engine: Gecko
-    engine_version: "20131030"
+    engine_version: "17.0"
   device:
     type: desktop
     brand: ""
@@ -329,7 +329,7 @@
     short_name: IW
     version: "3.0.6"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.15"
   device:
     type: desktop
     brand: ""
@@ -349,7 +349,7 @@
     short_name: I4
     version: "5.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "5.0"
   device:
     type: desktop
     brand: ""
@@ -429,7 +429,7 @@
     short_name: FF
     version: "2.0.0.8"
     engine: Gecko
-    engine_version: "20071019"
+    engine_version: "1.8.1.8"
   device:
     type: desktop
     brand: ""
@@ -489,7 +489,7 @@
     short_name: FF
     version: "25.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "25.0"
   device:
     type: desktop
     brand: ""
@@ -509,7 +509,7 @@
     short_name: GA
     version: "1.3.21"
     engine: Gecko
-    engine_version: "20051105"
+    engine_version: "1.7.12"
   device:
     type: desktop
     brand: ""
@@ -529,7 +529,7 @@
     short_name: KZ
     version: "0.5.4"
     engine: Gecko
-    engine_version: "20081206"
+    engine_version: "1.8.1.18"
   device:
     type: desktop
     brand: ""
@@ -583,7 +583,7 @@
     short_name: FF
     version: "3.0.7"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.7"
   device:
     type: desktop
     brand: ""
@@ -603,7 +603,7 @@
     short_name: CK
     version: "1.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "25.0"
   device:
     type: desktop
     brand: ""
@@ -623,7 +623,7 @@
     short_name: FF
     version: "3.0"
     engine: Gecko
-    engine_version: "20070301"
+    engine_version: "1.9"
   device:
     type: desktop
     brand: ""
@@ -663,7 +663,7 @@
     short_name: FF
     version: "3.5"
     engine: Gecko
-    engine_version: "20090424"
+    engine_version: "1.9.1"
   device:
     type: desktop
     brand: ""
@@ -683,7 +683,7 @@
     short_name: FF
     version: "4.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "2.0"
   device:
     type: desktop
     brand: ""
@@ -703,7 +703,7 @@
     short_name: IW
     version: "17.0.10"
     engine: Gecko
-    engine_version: "20131030"
+    engine_version: "17.0"
   device:
     type: desktop
     brand: ""
@@ -763,7 +763,7 @@
     short_name: MB
     version: "0.9.7"
     engine: Gecko
-    engine_version: "20090514"
+    engine_version: "1.9.2"
   device:
     type: desktop
     brand: ""
@@ -843,7 +843,7 @@
     short_name: NS
     version: "6.01"
     engine: Gecko
-    engine_version: "20010131"
+    engine_version: ""
   device:
     type: desktop
     brand: ""
@@ -883,7 +883,7 @@
     short_name: PX
     version: "0.4"
     engine: Gecko
-    engine_version: "20021029"
+    engine_version: "1.2"
   device:
     type: desktop
     brand: ""
@@ -977,7 +977,7 @@
     short_name: SX
     version: "2.0"
     engine: Gecko
-    engine_version: "20061024"
+    engine_version: "1.8.1"
   device:
     type: desktop
     brand: ""
@@ -1014,7 +1014,7 @@
     short_name: FF
     version: "2.0.0.21"
     engine: Gecko
-    engine_version: "20090218"
+    engine_version: "1.8.1.21"
   device:
     type: desktop
     brand: ""
@@ -1108,7 +1108,7 @@
     short_name: FF
     version: "3.0.1"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.1"
   device:
     type: desktop
     brand: ""
@@ -1128,7 +1128,7 @@
     short_name: FF
     version: "3.6.17"
     engine: Gecko
-    engine_version: "20110429"
+    engine_version: "1.9.2.17"
   device:
     type: desktop
     brand: ""
@@ -1148,7 +1148,7 @@
     short_name: FF
     version: "25.0.1"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "2.0"
   device:
     type: desktop
     brand: ""
@@ -1188,7 +1188,7 @@
     short_name: FF
     version: "1.5.0.7"
     engine: Gecko
-    engine_version: "20061102"
+    engine_version: "1.8.0.7"
   device:
     type: desktop
     brand: ""
@@ -1228,7 +1228,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -1248,7 +1248,7 @@
     short_name: FF
     version: "10.0.12"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "10.0.12"
   device:
     type: desktop
     brand: ""
@@ -1373,7 +1373,7 @@
     short_name: FF
     version: "3.5.2"
     engine: Gecko
-    engine_version: "20090729"
+    engine_version: "1.9.1.2"
   device:
     type: desktop
     brand: ""
@@ -1393,7 +1393,7 @@
     short_name: FF
     version: "3.5.9"
     engine: Gecko
-    engine_version: "20100525"
+    engine_version: "1.9.1.9"
   device:
     type: desktop
     brand: ""
@@ -1475,7 +1475,7 @@
     short_name: FF
     version: "3.6.24"
     engine: Gecko
-    engine_version: "20111101"
+    engine_version: "1.9.2.24"
   device:
     type: desktop
     brand: ""
@@ -1575,7 +1575,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -1612,7 +1612,7 @@
     short_name: FF
     version: "3.0.14"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.14"
   device:
     type: desktop
     brand: ""
@@ -1632,7 +1632,7 @@
     short_name: FF
     version: "3.5.6"
     engine: Gecko
-    engine_version: "20091215"
+    engine_version: "1.9.1.6"
   device:
     type: desktop
     brand: ""
@@ -1652,7 +1652,7 @@
     short_name: FF
     version: "3.8"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.2"
   device:
     type: desktop
     brand: ""
@@ -1692,7 +1692,7 @@
     short_name: BE
     version: "0.8.1"
     engine: Gecko
-    engine_version: "20020911"
+    engine_version: ""
   device:
     type: desktop
     brand: ""
@@ -1929,7 +1929,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -1949,7 +1949,7 @@
     short_name: FF
     version: "3.6.13"
     engine: Gecko
-    engine_version: "20110504"
+    engine_version: "1.9.2.13"
   device:
     type: desktop
     brand: ""
@@ -1969,7 +1969,7 @@
     short_name: FF
     version: "3.6.3"
     engine: Gecko
-    engine_version: "20100403"
+    engine_version: "1.9.2.3"
   device:
     type: desktop
     brand: ""
@@ -1989,7 +1989,7 @@
     short_name: FL
     version: "2.5.6"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.16"
   device:
     type: desktop
     brand: ""
@@ -2009,7 +2009,7 @@
     short_name: ID
     version: "26.0.0.2"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -2497,7 +2497,7 @@
     short_name: CO
     version: "11.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "11.0"
   device:
     type: desktop
     brand: ""
@@ -2517,7 +2517,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -2537,7 +2537,7 @@
     short_name: ID
     version: "25.0.0.1"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "25.0"
   device:
     type: desktop
     brand: ""
@@ -2597,7 +2597,7 @@
     short_name: PM
     version: "24.3.1"
     engine: Gecko
-    engine_version: "20140129"
+    engine_version: "24.0"
   device:
     type: desktop
     brand: ""
@@ -2694,7 +2694,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: ""
@@ -2785,7 +2785,7 @@
     short_name: FB
     version: "0.7"
     engine: Gecko
-    engine_version: "20031007"
+    engine_version: "1.5"
   device:
     type: desktop
     brand: ""
@@ -2825,7 +2825,7 @@
     short_name: FF
     version: "2.0.0.20"
     engine: Gecko
-    engine_version: "20081217"
+    engine_version: "1.8.1.20"
   device:
     type: desktop
     brand: ""
@@ -2965,7 +2965,7 @@
     short_name: FF
     version: "3.0"
     engine: Gecko
-    engine_version: "20061007"
+    engine_version: "1.9"
   device:
     type: desktop
     brand: ""
@@ -3025,7 +3025,7 @@
     short_name: FF
     version: "18.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "18.0"
   device:
     type: desktop
     brand: ""
@@ -3045,7 +3045,7 @@
     short_name: FF
     version: "3.5.6"
     engine: Gecko
-    engine_version: "20091201"
+    engine_version: "1.9.1.6"
   device:
     type: desktop
     brand: ""
@@ -3353,7 +3353,7 @@
     short_name: FF
     version: "3.0.2"
     engine: Gecko
-    engine_version: ""
+    engine_version: "1.9.0.2"
   device:
     type: desktop
     brand: ""
@@ -3373,7 +3373,7 @@
     short_name: FF
     version: "3.1"
     engine: Gecko
-    engine_version: "20090308"
+    engine_version: "1.9.1"
   device:
     type: desktop
     brand: ""
@@ -3613,7 +3613,7 @@
     short_name: KM
     version: "1.5.4"
     engine: Gecko
-    engine_version: "20100228"
+    engine_version: "1.8.1.24"
   device:
     type: desktop
     brand: ""
@@ -3633,7 +3633,7 @@
     short_name: KP
     version: "3.0"
     engine: Gecko
-    engine_version: "20080705"
+    engine_version: "1.9"
   device:
     type: desktop
     brand: ""
@@ -4275,7 +4275,7 @@
     short_name: CA
     version: "2.1.2"
     engine: Gecko
-    engine_version: "20120308"
+    engine_version: "1.9.2.28"
   device:
     type: desktop
     brand: AP
@@ -4295,7 +4295,7 @@
     short_name: FF
     version: "3.5.6"
     engine: Gecko
-    engine_version: "20091201"
+    engine_version: "1.9.1.6"
   device:
     type: desktop
     brand: AP
@@ -4369,7 +4369,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: AP
@@ -4429,7 +4429,7 @@
     short_name: FF
     version: "26.0"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "26.0"
   device:
     type: desktop
     brand: AP
@@ -5707,7 +5707,7 @@
     short_name: OS
     version: "3.7.22"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "42.0"
   device:
     type: desktop
     brand: OS
@@ -5727,7 +5727,7 @@
     short_name: OS
     version: "3.7.30"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "45.0"
   device:
     type: desktop
     brand: OS
@@ -5747,7 +5747,7 @@
     short_name: OS
     version: "3.8.20"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "52.0"
   device:
     type: desktop
     brand: OS
@@ -5767,7 +5767,7 @@
     short_name: OS
     version: "3.8.6.6"
     engine: Gecko
-    engine_version: "20100101"
+    engine_version: "45.0"
   device:
     type: desktop
     brand: OS
