--- a/Tests/fixtures/unknown.yml
+++ b/Tests/fixtures/unknown.yml
@@ -202,7 +202,7 @@
     short_name: FE
     version: "10.0"
     engine: Gecko
-    engine_version: "20120118"
+    engine_version: "10.0"
   device:
     type: ""
     brand: ""
