feat(device) detect brand BQ model: Aquaris A4.5 feat(device) detect brand Ziox model: Astra NXT Pro
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3052,6 +3052,8 @@ bq:
     - regex: 'Aquaris M8'
       model: 'Aquaris M8'
       device: 'tablet'
+    - regex: 'Aquaris_A4.5'
+      model: 'Aquaris A4.5'
     - regex: 'BQ(?:ru)?[_ ]5590[);/ ]'
       model: 'Spring'
     - regex: 'BQ[S]?-(?:6016L|5520)[);/ ]'
@@ -16812,13 +16814,15 @@ Openbox:
 
 # Ziox
 Ziox:
-  regex: 'ZIOX[_ ]|(?:Astra Viva 4G)[);/ ]'
+  regex: 'ZIOX[_ ]|(?:Astra Viva 4G|Astra NXT Pro)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'ZIOX_F9_PRO[);/ ]'
       model: 'F9 Pro'
     - regex: 'Astra Viva 4G[);/ ]'
       model: 'Astra Viva 4G'
+    - regex: 'Astra NXT Pro[);/ ]'
+      model: 'Astra NXT Pro'
 
 # iDroid
 iDroid:
