--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6298,7 +6298,7 @@ iRulu:
 
 # Irbis
 Irbis:
-  regex: 'IRBIS|TZ(1(?:00|42|50|84|65|7[035-89]|8[36]|9[578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|62|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
+  regex: 'IRBIS|TZ(1(?:0[04]|42|50|84|65|7[01345-89]|8[356]|9[12578])|49|7(?:1[2467]|2[01567]|37|4[257]|5[23457]|6[12]|72|7[17]|8[1]|9[47])|8(?:[34]1|5[3-8]|6[45]|7[2478]|8[1-5]|9[0127])|96[0-9])|TZ(?:one|art|HIT|81L)|(SP(?:0[56]|2[01]|4[1-36]|40[12]|45[345]|49[34]|50|51[0147]|531|54[12]|55[0124]|571))[;)\ ]'
   device: 'tablet'
   models:
     - regex: '(TZ(?:[0-9]+)|TZ(?:one|art|HIT|81L))[;)\ ]'
@@ -15929,9 +15929,14 @@ Maxcom:
 
 # Luna
 Luna:
-  regex: 'LUNA[ _](V55|G60)[);/ ]'
+  regex: '(?:LUNA[ _](V55|G60)|TG-L800S)[);/ ]'
   device: 'smartphone'
-  model: '$1'
+  models:
+    - regex: 'LUNA[ _](V55|G60)[);/ ]'
+      model: '$1'
+    - regex: '(TG-L800S)[);/ ]'
+      model: '$1'
+
 
 # Protruly
 Protruly:
@@ -16770,7 +16775,7 @@ Logic:
 
 # Cloudfone
 Cloudfone:
-  regex: 'Thrill (?:Boost[ ]?(2|3)?|Snap|Access|)[);/ ]'
+  regex: 'Thrill (?:Boost[ ]?(2|3)?|Snap|Access)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost (2|3)[);/ ]'
@@ -17010,3 +17015,9 @@ Xgody:
     - regex: 'XGODY_X96[);/ ]'
       model: 'X96'
       device: 'tv'
+
+# Alcor (alcordigital)
+Alcor:
+  regex: '(Access_Q784C)[);/ ]'
+  device: 'tablet'
+  model: '$1'
