feat(device) detect brand AllCall model: Rio X feat(device) detect brand Highscreen models: Power Five Max 2, Power Five Max Lite
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -744,7 +744,7 @@ Alba:
 
 # AllCall
 AllCall:
-  regex: 'AllCall_|Heat[34]|Hot ?[125][^;/]+ Build'
+  regex: 'AllCall_|Heat[34]|Rio_X[);/ ]|Hot ?[125][^;/]+ Build'
   device: 'smartphone'
   models:
     - regex: 'AllCall_(Alpha|Atom|Bro|Madrid)'
@@ -761,6 +761,8 @@ AllCall:
       model: 'Rio'
     - regex: 'Heat([34])'
       model: 'Heat $1'
+    - regex: 'Rio_X[);/ ]'
+      model: 'Rio X'
     - regex: 'Hot ?([125][^;/]+) Build'
       model: 'Hot $1'
 
@@ -15542,13 +15544,17 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max)|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ]Power|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|FestXL|Tasty|Boost3)[;)/ ]'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
       model: '$1'
     - regex: 'PowerFivePro[;)/ ]'
       model: 'Power Five Pro'
+    - regex: 'PowerFiveMaxLite[;)/ ]'
+      model: 'Power Five Max Lite'
+    - regex: 'PowerFiveMax2[;)/ ]'
+      model: 'Power Five Max 2'
     - regex: 'Power Five Evo[;)/ ]'
       model: 'Power Five Evo'
     - regex: 'Power Five Max[;)/ ]'
