feat(device) detect new brand Fero models: Royale X2, Y1 feat(device) detect brand Ginzzu model: RS8501
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5214,7 +5214,7 @@ Gigaset:
 
 # Ginzzu
 Ginzzu:
-  regex: 'GINZZU[_ ]|((?:RS(?:7[14]|81|9[67])D)|S50[45]0|S5120|RS(6[12]|9[45])D|S40[23]0|RS8502|RS9602)[);/ ]'
+  regex: 'GINZZU[_ ]|((?:RS(?:7[14]|81|9[67])D)|S50[45]0|S5120|RS(6[12]|9[45])D|S40[23]0|RS850[12]|RS9602)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'GINZZU[_ ]?(S40[17]0|S4710|ST6040|ST6120)'
@@ -5224,7 +5224,7 @@ Ginzzu:
       device: 'tablet'
     - regex: '(RS6[12]D) ULTIMATE'
       model: '$1 Ultimate'
-    - regex: '(?:GINZZU[ _])?((?:RS(?:7[14]|81|9[4-7])D)|S50[45]0|S5120|S40[23]0|RS8502|RS9602|RS94D)[);/ ]'
+    - regex: '(?:GINZZU[ _])?((?:RS(?:7[14]|81|9[4-7])D)|S50[45]0|S5120|S40[23]0|RS850[12]|RS9602|RS94D)[);/ ]'
       model: '$1'
 
 # Gionee
@@ -17052,3 +17052,13 @@ Ovvi:
   regex: 'Jumbo X1'
   device: 'smartphone'
   model: 'Jumbo X1'
+
+# Fero
+Fero:
+  regex: 'Fero_|Royale_X2'
+  device: 'smartphone'
+  models:
+    - regex: 'Fero_Y1'
+      model: 'Y1'
+    - regex: 'Royale_X2'
+      model: 'Royale X2'
