--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16744,7 +16744,7 @@ Logic:
 
 # Cloudfone
 Cloudfone:
-  regex: 'Thrill (?:Boost[ ]?(2|3)?|Snap|Access|)[);/ ]'
+  regex: 'Thrill (?:Boost[ ]?(2|3)?|Snap|Access)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Thrill Boost (2|3)[);/ ]'
