--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10043,6 +10043,8 @@ OPPO:
       model: 'R7 Plus'
     - regex: '(?:OPPO[ _]?)?R7Plusf[);/ ]'
       model: 'R7 Plus F'
+    - regex: '(?:OPPO[ _]?)?X9079[);/ ]'
+      model: 'R9 Plus'
     - regex: '(?:OPPO[ _]?)?CPH1607[);/ ]'
       model: 'R9s'
     - regex: '(?:OPPO[ _]?)?(?:CPH1611|R9s Plus)[);/ ]'
