feat(device) detect brand InnJoo models: Halo Plus, Halo 4, Halo 2 3G, 2, One 3g, 3, 4, Pro 2, X3, Halo 4 Mini LTE, Halo X LTE
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6762,11 +6762,31 @@ InFocus:
 
 # InnJoo
 InnJoo:
-  regex: 'InnJoo'
+  regex: 'InnJoo|(?:Halo Plus|Halo[ _]4([ _]mini[ _]LTE)?||Halo2 3G)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'InnJoo[ _]X'
+    - regex: 'InnJoo[ _]X3[);/ ]'
+      model: 'X3'
+    - regex: 'InnJoo[ _]X[);/ ]'
       model: 'X'
+    - regex: 'Halo[ _]X[ _]LTE[);/ ]'
+      model: 'Halo X LTE'
+    - regex: 'Halo Plus[);/ ]'
+      model: 'Halo Plus'
+    - regex: 'Halo[ _]4[ _]mini[ _]LTE[);/ ]'
+      model: 'Halo 4 Mini LTE'
+    - regex: 'Halo 4[);/ ]'
+      model: 'Halo 4'
+    - regex: 'Halo2 3G[);/ ]'
+      model: 'Halo 2 3G'
+    - regex: 'InnJoo[ _]Pro2[);/ ]'
+      model: 'Pro 2'
+    - regex: 'Innjoo ONE 3G[);/ ]'
+      model: 'One 3G'
+    - regex: 'Innjoo[ _]2[ _]LTE[);/ ]'
+      model: '2 LTE'
+    - regex: 'InnJoo[ _]([2-4])'
+      model: '$1'
 
 # Inkti
 Inkti:
