feat(device) detect brand Jinga model: Hotz M1
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6762,15 +6762,15 @@ InFocus:
 
 # InnJoo
 InnJoo:
-  regex: 'InnJoo|(?:Halo Plus|Halo[ _]4([ _]mini[ _]LTE)?||Halo2 3G)[);/ ]'
+  regex: 'InnJoo|(?:Halo Plus|Halo X|Halo[ _]4(?:[ _]mini[ _]LTE)?|Halo2 3G)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'InnJoo[ _]X3[);/ ]'
       model: 'X3'
-    - regex: 'InnJoo[ _]X[);/ ]'
-      model: 'X'
     - regex: 'Halo[ _]X[ _]LTE[);/ ]'
       model: 'Halo X LTE'
+    - regex: 'InnJoo[ _]X[);/ ]'
+      model: 'X'
     - regex: 'Halo Plus[);/ ]'
       model: 'Halo Plus'
     - regex: 'Halo[ _]4[ _]mini[ _]LTE[);/ ]'
@@ -16735,11 +16735,13 @@ TurboKids:
 
 # Jinga
 Jinga:
-  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus)[);/ ]'
+  regex: 'Jinga[-_ ]|(?:Optim4G|PassPlus|Hotz[_ ]M1)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Optim4G[);/ ]'
       model: 'Optim 4G'
+    - regex: 'Hotz[_ ]M1[);/ ]'
+      model: 'Hotz M1'
     - regex: 'PassPlus[);/ ]'
       model: 'Pass Plus'
     - regex: 'Jinga Iron[);/ ]'
