fix(device) merge brand Alldocube into cube feat(device) detect brand Cube models: iWork 8 Air (I1-TF, I1-TFB, I1-TFD), iWork 8 Ultimate (I1-TC),  iWork 10 Pro (i1002S)
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3598,9 +3598,9 @@ Crosscall:
     - regex: 'Trekker-([MSX][1234](?: Core)?)'
       model: 'Trekker-$1'
 
-# Cube
+# Cube, ACube or Alldocube (https://www.alldocube.com)
 Cube:
-  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML)[);/ ]'
+  regex: '(<!myPhone ?)Cube|(U[0-9]+GT|K8GT)|(?:T8-PLUSM?S?|T8PLUSML|I1-TF[BD]?|I1-TC|i1002S|T1001XS|iPlay_20|U1006)[);/ ]'
   device: 'tablet'
   models:
     - regex: 'U27GT'
@@ -3611,6 +3611,19 @@ Cube:
       model: 'Talk 79'
     - regex: 'U65GT'
       model: 'Talk 9X'
+    - regex: 'I1-TF[BD]?[);/ ]'
+      model: 'iWork 8 Air'
+    - regex: 'I1-TC[);/ ]'
+      model: 'iWork 8 Ultimate'
+    - regex: 'i1002S[);/ ]'
+      model: 'iWork 10 Pro'
+
+    - regex: 'T1001XS[);/ ]'
+      model: 'M5XS'
+    - regex: 'U1006[);/ ]'
+      model: 'iPlay 10 Pro 10.1"'
+    - regex: 'iPlay_20[);/ ]'
+      model: 'iPlay 20'
 
     - regex: '(U[0-9]+GT[^;/]*) Build'
       model: '$1'
@@ -15776,18 +15789,6 @@ Sunvell:
   regex: 'T95ZPLUS[);/ ]'
   device: 'tv'
   model: 'T95Z Plus'
-
-# AllDocube (https://www.alldocube.com/)
-AllDocube:
-  regex: '(?:T1001XS|iPlay_20|U1006)[);/ ]'
-  device: 'tablet'
-  models:
-    - regex: 'T1001XS[);/ ]'
-      model: 'M5XS'
-    - regex: 'U1006[);/ ]'
-      model: 'iPlay 10 Pro 10.1"'
-    - regex: 'iPlay_20[);/ ]'
-      model: 'iPlay 20'
 
 # Ugoos
 Ugoos:
