--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -7582,7 +7582,7 @@
     engine_version: ""
   device:
     type: tablet
-    brand: 3A
+    brand: CU
     model: iPlay 10 Pro 10.1"
   os_family: Android
   browser_family: Android Browser
