--- a/Tests/fixtures/tablet.yml
+++ b/Tests/fixtures/tablet.yml
@@ -935,7 +935,7 @@
     engine_version: "537.36"
   device:
     type: tablet
-    brand: 3A
+    brand: CU
     model: iPlay 20
   os_family: Android
   browser_family: Chrome
@@ -955,7 +955,7 @@
     engine_version: "537.36"
   device:
     type: tablet
-    brand: 3A
+    brand: CU
     model: M5XS
   os_family: Android
   browser_family: Unknown
