feat(device) detect brand Gigaset models: ME Pro, ME, ME Pure
issue #6355

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5197,12 +5197,20 @@ Gigabyte:
 
 # Gigaset
 Gigaset:
-  regex: 'Gigaset'
+  regex: 'Gigaset|GS5[357]-6[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'Gigaset QV(1030|830)'
       model: 'Gigaset QV$1'
       device: 'tablet'
+
+    - regex: 'GS57-6[);/ ]'
+      model: 'ME Pro'
+    - regex: 'GS55-6[);/ ]'
+      model: 'ME'
+    - regex: 'GS53-6[);/ ]'
+      model: 'ME Pure'
+
     - regex: 'Gigaset ([^;/]+) Build'
       model: '$1'
     - regex: 'Gigaset ([^;/)]+)[);/ ]'
