feat(device) detect brand Samsung models: GALAXY J3 Emerge (SM-J327P),  GALAXY Grand Max (SM-G7200)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2239,7 +2239,7 @@ Bitel:
 
 # Blu
 Blu:
-  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash (?:X[2L]|L3)|PURE XL|Life One X2||GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
+  regex: 'BLU |(?:blu|Dash)[ _]([^/;]+) Build|Studio (5.0K|5.5|View XL|Mega|C 8\+8|C HD|C|G|Selfie LTE|Touch|M HD|M5 Plus|J[1258]|X|X8 HD)|Advance (4.0 ?[LM]|5.0(?: HD)?|A4)|ENERGY (DIAMOND|XL)|LIFE XL|Dash (?:X[2L]|L3)|PURE XL|Life One X2|GRAND (?:5.5 HD|XL LTE)|R1 (HD|PLUS)|Tank Xtreme 5.0|Tank Xtreme Pro|STUDIO SELFIE'
   device: 'smartphone'
   models:
    - regex: 'Advance (4.0 ?[LM]|4.0|5.0(?: HD)?|A4)'
@@ -11316,7 +11316,7 @@ Samsung:
       model: 'GALAXY J3 Pro'
     - regex: '(?:SAMSUNG-)?SM-J327(?:T1|[ATW])[);/ ]'
       model: 'GALAXY J3 Prime'
-    - regex: '(?:SAMSUNG-)?SM-J327(?:F|R4)'
+    - regex: '(?:SAMSUNG-)?SM-J327(?:[FP]|R4)'
       model: 'GALAXY J3 Emerge'
     - regex: '(?:SAMSUNG-)?SM-J337R4[);/ ]'
       model: 'GALAXY J3 Aura'
@@ -11497,7 +11497,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-G710[25L]?[);/ ]'
       model: 'GALAXY Grand 2'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|[02])[);/ ]'
       model: 'GALAXY Grand Max'
     - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[89]W|0MU|0BT|0R4)[);/ ]'
       model: 'GALAXY Grand Prime'
