--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -9566,3 +9566,43 @@
     model: Grand XL LTE
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/1.6.0 Linux; U; Android 4.4.4; SM-G7200 Build/KTU84P
+  os:
+    name: Android
+    short_name: AND
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY Grand Max
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 6.0.1; SM-J327P Build/MMB29M)
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Emerge
+  os_family: Android
+  browser_family: Android Browser
