feat(device) detect brand Samsung models: GALAXY Tab E 9.6" WiFi (SM-T562), GALAXY Beam 2 (SM-G3858),  GALAXY Tab 3 7.0" 4G (SM-T217T), GALAXY S II (SM-G9100)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10671,6 +10671,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-P511[03]'
       device: 'tablet'
       model: 'GALAXY Tab 2 10.1" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T217T'
+      device: 'tablet'
+      model: 'GALAXY Tab 3 7.0" 4G'
     - regex: '(?:SAMSUNG-)?GT-P5200'
       device: 'tablet'
       model: 'GALAXY Tab 3 10.1"'
@@ -10887,7 +10890,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T37[57]|T378[LSV])'
       device: 'tablet'
       model: 'GALAXY Tab E 8.0"'
-    - regex: '(?:SAMSUNG-)?SM-T560'
+    - regex: '(?:SAMSUNG-)?SM-T56[02]'
       device: 'tablet'
       model: 'GALAXY Tab E 9.6" WiFi'
     - regex: '(?:SAMSUNG-)?SM-T561'
@@ -10952,6 +10955,8 @@ Samsung:
       model: 'GALAXY Ace 4 Lite'
     - regex: '(?:SAMSUNG-)?SM-G318H[);/ ]'
       model: 'GALAXY Ace 4 Neo'
+    - regex: '(?:SAMSUNG-)?SM-G9100[);/ ]'
+      model: 'GALAXY S II'
     - regex: '(?:SAMSUNG-)?SHV-E120S[);/ ]'
       model: 'GALAXY S II HD LTE'
     - regex: '(?:SAMSUNG-)?GT-I8190'
@@ -10966,6 +10971,8 @@ Samsung:
       model: 'H1'
     - regex: '(?:SAMSUNG-)?GT-I85[23]0'
       model: 'GALAXY Beam'
+    - regex: '(?:SAMSUNG-)?SM-G3858'
+      model: 'GALAXY Beam 2'
     - regex: '(?:SAMSUNG-)?SM-G600S'
       model: 'GALAXY Wide'
     - regex: '(?:SAMSUNG-)?GT-I855[028]'
