feat(device) detect brand Samsung models: GALAXY A8 (2018) (SM-A530X), GALAXY A7 (2018) (SM-A750X)  GALAXY J2 Pro (SM-J250N),  GALAXY Tab S2 9.7" LTE (SM-T818W, SM-T818T), GALAXY Alpha (SM-G850X),  GALAXY Grand Prime VE Duos (SM-G531M, SM-G531Y), GALAXY J2 Duos (SM-J200BT)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10836,7 +10836,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T71[03]|T710X)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T819[Y]?)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T818[TW]|T819[Y]?)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" LTE'
     - regex: '(?:SAMSUNG-)?SM-T820'
@@ -10915,7 +10915,7 @@ Samsung:
       model: 'GALAXY Watch Active 2'
 
     # explicit smartphone models
-    - regex: '(?:SAMSUNG-)?SM-G850[AMSWYKL]'
+    - regex: '(?:SAMSUNG-)?SM-G850[AMSWYKLX]'
       model: 'GALAXY Alpha'
     - regex: '(?:SAMSUNG-)?GT-B5330'
       model: 'GALAXY Chat'
@@ -11223,7 +11223,7 @@ Samsung:
       model: 'GALAXY A7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A720[FS]'
       model: 'GALAXY A7 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGCN])'
+    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGCNX])'
       model: 'GALAXY A7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A71(?:5[FW])?[);/ ]'
       model: 'GALAXY A71'
@@ -11237,7 +11237,7 @@ Samsung:
       model: 'GALAXY A8 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G887[0F]'
       model: 'GALAXY A8s'
-    - regex: '(?:SAMSUNG-)?SM-A530[NW]'
+    - regex: '(?:SAMSUNG-)?SM-A530[NWX]'
       model: 'GALAXY A8 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A730F'
       model: 'GALAXY A8+ (2018)'
@@ -11311,11 +11311,13 @@ Samsung:
       model: 'GALAXY J1 Ace'
     - regex: '(?:SAMSUNG-)?SM-J200[FGHY]'
       model: 'GALAXY J2'
+    - regex: '(?:SAMSUNG-)?SM-J200BT'
+      model: 'GALAXY J2 Duos'
     - regex: '(?:SAMSUNG-)?SM-J260AZ'
       model: 'GALAXY J2 Pure'
     - regex: '(?:SAMSUNG-)?SM-(?:J260([AFGMY]|T1)|S260DL)'
       model: 'GALAXY J2 Core'
-    - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FMGY])'
+    - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FNMGY])'
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
@@ -11509,7 +11511,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWMP]|0[AF]Z|1[FH]|0[89]W|0MU|0BT|0R4)[);/ ]'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-G531BT[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G531(?:BT|[MY])[);/ ]'
       model: 'GALAXY Grand Prime VE Duos'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G532F[);/ ]'
