feat(device) detect brand Samsung models: GALAXY Luna (SM-S120VL), GALAXY J3 Luna Pro (SM-S327VL), GALAXY S6 (SM-S907VL),  GALAXY J7 (2017) (SM-J727A), GALAXY Tab A 8.0" LTE (2018) (SM-T387R4), GALAXY A9 Star (SM-G8858), GALAXY J7 Crown (SM-S757BL)  GALAXY W2018 (SM-W2018), GALAXY A8 (2018) (SM-A530M), GALAXY W2019 (SM-W2019)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10860,7 +10860,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:P350|T3[58]5)'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE'
-    - regex: '(?:SAMSUNG-)?SM-T387(?:VK|AA|[WVT])'
+    - regex: '(?:SAMSUNG-)?SM-T387(?:R4|VK|AA|[WVT])'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE (2018)'
     - regex: '(?:SAMSUNG-)?SM-T295'
@@ -11131,7 +11131,7 @@ Samsung:
       model: 'GALAXY S5 Neo'
     - regex: '(?:SAMSUNG-)?SM-G860P'
       model: 'GALAXY S5 K Sport'
-    - regex: '(?:SAMSUNG-)?SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?|SC-05G'
+    - regex: '(?:SAMSUNG-)?(?:SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?|SM-S907VL)|SC-05G'
       model: 'GALAXY S6'
     - regex: '(?:SAMSUNG-)?SM-G890A'
       model: 'GALAXY S5 Active'
@@ -11237,7 +11237,7 @@ Samsung:
       model: 'GALAXY A8 (2016)'
     - regex: '(?:SAMSUNG-)?SM-G887[0F]'
       model: 'GALAXY A8s'
-    - regex: '(?:SAMSUNG-)?SM-A530[NWX]'
+    - regex: '(?:SAMSUNG-)?SM-A530[NWXM]'
       model: 'GALAXY A8 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A730F'
       model: 'GALAXY A8+ (2018)'
@@ -11247,7 +11247,7 @@ Samsung:
       model: 'GALAXY A9 7'
     - regex: '(?:SAMSUNG-)?SM-A920[0FXN]'
       model: 'GALAXY A9 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-G8850'
+    - regex: '(?:SAMSUNG-)?SM-G885[08]'
       model: 'GALAXY A9 Star'
     - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
       model: 'GALAXY A9 Pro'
@@ -11299,6 +11299,8 @@ Samsung:
       model: 'GALAXY A90'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
       model: 'GALAXY S III Neo'
+    - regex: '(?:SAMSUNG-)?SM-S120VL[);/ ]'
+      model: 'GALAXY Luna'
     - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHMY])'
       model: 'GALAXY J1'
     - regex: '(?:SAMSUNG-)?SM-J105[BFHY]'
@@ -11323,6 +11325,8 @@ Samsung:
       model: 'GALAXY J3 Orbit'
     - regex: '(?:SAMSUNG-)?SM-J311(?:[09]|9S)'
       model: 'GALAXY J3 Pro'
+    - regex: '(?:SAMSUNG-)?SM-S327VL[);/ ]'
+      model: 'GALAXY J3 Luna Pro'
     - regex: '(?:SAMSUNG-)?SM-J327(?:T1|[ATW])[);/ ]'
       model: 'GALAXY J3 Prime'
     - regex: '(?:SAMSUNG-)?SM-J327(?:[FP]|R4)'
@@ -11367,7 +11371,7 @@ Samsung:
       model: 'GALAXY J7 (2015)'
     - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J710GN|J7109)'
       model: 'GALAXY J7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727(?:[USF]|R4))'
+    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727(?:[AUSF]|R4))'
       model: 'GALAXY J7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP|R4)[);/ ]'
       model: 'GALAXY J7 (2018)'
@@ -11387,7 +11391,7 @@ Samsung:
       model: 'GALAXY J7 Core' # also GALAXY J7 Nxt and GALAXY J7 Neo
     - regex: '(?:SAMSUNG-)?SM-J720[FM]'
       model: 'GALAXY J7 Duo'
-    - regex: '(?:SAMSUNG-)?SM-S767VL'
+    - regex: '(?:SAMSUNG-)?SM-(?:S767VL|S757BL)'
       model: 'GALAXY J7 Crown'
     - regex: '(?:SAMSUNG-)?SM-J727(?:P|T|V)'
       model: 'GALAXY J7 V'
@@ -11421,6 +11425,8 @@ Samsung:
       model: 'GALAXY M31'
     - regex: '(?:SAMSUNG-)?SM-M405'
       model: 'GALAXY M40'
+    - regex: '(?:SAMSUNG-)?SM-W201([89])'
+      model: 'GALAXY W201$1'
 
     - regex: '(?:SAMSUNG-)?SM-G850F'
       model: 'GALAXY Alpha'
