--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11207,7 +11207,7 @@ Samsung:
       model: 'GALAXY A5 (2015)'
     - regex: '(?:SAMSUNG-)?SM-A510[08FKLMSYX]'
       model: 'GALAXY A5 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-A520[FKLSW]'
+    - regex: '(?:SAMSUNG-)?SM-A520[FKLSWX]'
       model: 'GALAXY A5 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPTUX])'
       model: 'GALAXY A6'
@@ -11221,7 +11221,7 @@ Samsung:
       model: 'GALAXY A7'
     - regex: '(?:SAMSUNG-)?SM-A710[08FKLMSYX]'
       model: 'GALAXY A7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-A720[FS]'
+    - regex: '(?:SAMSUNG-)?SM-A720[FSX]'
       model: 'GALAXY A7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGCNX])'
       model: 'GALAXY A7 (2018)'
@@ -11427,7 +11427,7 @@ Samsung:
       model: 'GALAXY M31'
     - regex: '(?:SAMSUNG-)?SM-M405'
       model: 'GALAXY M40'
-    - regex: '(?:SAMSUNG-)?SM-W201([89])'
+    - regex: '(?:SAMSUNG-)?SM-W201([689])'
       model: 'GALAXY W201$1'
 
     - regex: '(?:SAMSUNG-)?SM-G850F'
@@ -11574,7 +11574,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-I920[05]'
       model: 'GALAXY Mega 6.3'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N930[VFST0]|SCV34)'
+    - regex: '(?:SAMSUNG-)?(?:SM-N930[VFST0P]|SCV34)'
       model: 'GALAXY Note 7'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-N950|SCV37|SC-01K'
